<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bridge_msgs</name>
  <version>0.0.0</version>
  <description>The bridge_msgs package</description>

  <maintainer email="mabel@openrobotics.org">Mabel Zhang</maintainer>

  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!--depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend-->

  <!--member_of_group>rosidl_interface_packages</member_of_group-->

  <export>
    <build_type>ament_python</build_type>
    <!--ros1_bridge mapping_rules="ros1_bridge_mappings.yaml"/-->
  </export>
</package>
